<resources>
    <string name="app_name">Buckwheat App</string>
    <string name="logo">Buckwheat Calculator</string>
    <string name="text">Buckwheat App</string>
    <string name="plane_adult_text">Adult family member(s):</string>
    <string name="plane_child_text">Child(ren):</string>
    <string name="plane_group_text">Choose best option:</string>
    <string name="button_text">Find out</string>
    <string name="price_text">Price</string>
    <string name="plane">Buckwheat App</string>
    <string name="none"> </string>
    <string name="currency"> Price in the currency </string>
    <string name="hryvnia"> Hryvnias : </string>
    <string name="dollars"> USA Dollars : </string>
</resources>