<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/logo"
        android:textAlignment="center"
        android:textColor="@color/text"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/textView_adult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_marginHorizontal="42sp"
        android:layout_marginTop="20sp"
        android:text="@string/plane_adult_text"
        android:textColorHint="@color/text"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/adults"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_adult"
        android:layout_marginHorizontal="40sp"
        android:layout_marginTop="3sp"
        android:backgroundTint="@color/tine"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/text"
        android:textColorHint="@color/text" />

    <TextView
        android:id="@+id/textView_child"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/adults"
        android:layout_marginHorizontal="42sp"
        android:layout_marginTop="20sp"
        android:text="@string/plane_child_text"
        android:textColorHint="@color/text"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/children"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_child"
        android:layout_marginHorizontal="40sp"
        android:layout_marginTop="3sp"
        android:backgroundTint="@color/tine"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/text"
        android:textColorHint="@color/text" />

    <TextView
        android:id="@+id/textView_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/children"
        android:layout_marginHorizontal="42sp"
        android:layout_marginTop="20sp"
        android:text="@string/plane_group_text"
        android:textColorHint="@color/text"
        android:textSize="20dp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:layout_below="@+id/textView_group"
        android:layout_marginTop="15dp"
        android:weightSum="1">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_gravity="center_horizontal"
            android:checked="false"
            android:text="lose weight"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.13"
            android:checked="false"
            android:text="hold the weight"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.13"
            android:checked="false"
            android:text="gain weight"
            android:textSize="15sp" />
    </RadioGroup>

    <Button
        android:id="@+id/main_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup"
        android:layout_marginHorizontal="70sp"
        android:layout_marginTop="15sp"
        android:backgroundTint="@color/button"
        android:text="@string/button_text"
        android:textColor="@color/text" />

    <EditText
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_button"
        android:layout_marginHorizontal="42sp"
        android:layout_marginTop="15sp"
        android:backgroundTint="@color/tine"
        android:text="@string/none"
        android:textColorHint="@color/text"
        android:textSize="20sp" />

    <Button
        android:id="@+id/price_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/result"
        android:layout_marginHorizontal="70sp"
        android:layout_marginTop="15sp"
        android:backgroundTint="@color/button"
        android:text="@string/price_text"
        android:textColor="@color/text" />


</RelativeLayout>